@@ -10,8 +10,8 @@ use TestNewAttributeCloner;
 
 extends qw{TestAttributeCloner};
 
-has q{attr8} => (isa => q{Str}, is => q{ro});
-has q{attr9} => (isa => q{Str}, is => q{ro});
+has q{attr8}  => (isa => q{Str}, is => q{ro});
+has q{attr9}  => (isa => q{Str}, is => q{ro});
 has q{attr10} => (isa => q{Str}, is => q{ro});
 
 sub test_package {
